--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <body>
     <h1>Hello</h1>
     <script src="https://p.trellocdn.com/power-up.min.js"></script>
+    <script src="https://cajacko.github.io/trello-timesheet/index.js"></script>
   </body>
 </html>
