Resize the form

--- a/form.html
+++ b/form.html
@@ -19,5 +19,7 @@
 
       <button type="submit" class="mod-primary">Save</button>
     </form>
+
+    <script src="https://cajacko.github.io/trello-timesheet/form.js"></script>
   </body>
 </html>
