--- a/form.html
+++ b/form.html
@@ -2,23 +2,123 @@
   <head>
     <link rel="stylesheet" href="https://p.trellocdn.com/power-up.min.css">
     <style>
-      select { height: 30px; }
+      body {
+        padding: 20px;
+      }
+
+      form {
+        margin-bottom: 20px;
+      }
+
+      main {
+        margin: 0 auto;
+        max-width: 500px;
+      }
+
+      #history {
+        /*display: none;*/
+      }
+
+      .spinner {
+        margin: 100px auto;
+        width: 50px;
+        height: 40px;
+        text-align: center;
+        font-size: 10px;
+      }
+
+      .spinner > div {
+        background-color: #333;
+        height: 100%;
+        width: 6px;
+        display: inline-block;
+
+        -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
+        animation: sk-stretchdelay 1.2s infinite ease-in-out;
+      }
+
+      .spinner .rect2 {
+        -webkit-animation-delay: -1.1s;
+        animation-delay: -1.1s;
+      }
+
+      .spinner .rect3 {
+        -webkit-animation-delay: -1.0s;
+        animation-delay: -1.0s;
+      }
+
+      .spinner .rect4 {
+        -webkit-animation-delay: -0.9s;
+        animation-delay: -0.9s;
+      }
+
+      .spinner .rect5 {
+        -webkit-animation-delay: -0.8s;
+        animation-delay: -0.8s;
+      }
+
+      @-webkit-keyframes sk-stretchdelay {
+        0%, 40%, 100% { -webkit-transform: scaleY(0.4) }
+        20% { -webkit-transform: scaleY(1.0) }
+      }
+
+      @keyframes sk-stretchdelay {
+        0%, 40%, 100% {
+          transform: scaleY(0.4);
+          -webkit-transform: scaleY(0.4);
+        }  20% {
+          transform: scaleY(1.0);
+          -webkit-transform: scaleY(1.0);
+        }
+      }
     </style>
     <script src="https://p.trellocdn.com/power-up.min.js"></script>
   </head>
   <body>
-    <form id="timesheet">
-      <label for="timesheetDate">Date:</label>
-      <input id="timesheetDate" type="text" name="date" placeholder="Date: 2018-01-12" />
+    <main>
+      <form id="timesheet">
+        <label for="timesheetDate">Date:</label>
+        <input id="timesheetDate" type="text" name="date" placeholder="Date: 2018-01-12" />
 
-      <label for="timesheetTime">Time (hrs):</label>
-      <input id="timesheetTime" type="number" name="time" placeholder="e.g: 2" />
+        <label for="timesheetTime">Time (hrs):</label>
+        <input id="timesheetTime" type="number" name="time" placeholder="e.g: 2" />
 
-      <label for="timesheetNotes">Notes:</label>
-      <textarea id="timesheetNotes" name="notes" placeholder="e.g: 2"></textarea>
+        <label for="timesheetNotes">Notes:</label>
+        <textarea id="timesheetNotes" name="notes" placeholder="e.g: 2"></textarea>
 
-      <button type="submit" class="mod-primary">Save</button>
-    </form>
+        <button type="submit" class="mod-primary">Add new time entry</button>
+      </form>
+
+      <div id="loading">
+        <div class="spinner">
+          <div class="rect1"></div>
+          <div class="rect2"></div>
+          <div class="rect3"></div>
+          <div class="rect4"></div>
+          <div class="rect5"></div>
+        </div>
+      </div>
+
+      <section id="history">
+        <table>
+          <thead>
+            <tr>
+              <th>Date</th>
+              <th>Time (hrs): <span id="total">12</span></th>
+              <th>Notes</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>2018-01-01</td>
+              <td>2</td>
+              <td>Some notes of some kind</td>
+            </tr>
+          </tbody>
+        </table>
+
+      </section>
+    </main>
 
     <script src="https://cajacko.github.io/trello-timesheet/form.js"></script>
   </body>
