Added correct html

--- a/form.html
+++ b/form.html
@@ -104,16 +104,11 @@
           <thead>
             <tr>
               <th>Date</th>
-              <th>Time (hrs): <span id="total">12</span></th>
+              <th>Time (hrs): <span id="total"></span></th>
               <th>Notes</th>
             </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>2018-01-01</td>
-              <td>2</td>
-              <td>Some notes of some kind</td>
-            </tr>
+          </thead >
+          <tbody id="tbody">
           </tbody>
         </table>
 
