--- a/form.html
+++ b/form.html
@@ -115,6 +115,6 @@
       </section>
     </main>
 
-    <script src="https://cajacko.github.io/trello-timesheet/form.js"></script>
+    <script src="form.js"></script>
   </body>
 </html>
