Show errors where appropiate

--- a/form.html
+++ b/form.html
@@ -15,7 +15,7 @@
         max-width: 500px;
       }
 
-      #history {
+      #history, #error {
         display: none;
       }
 
@@ -89,6 +89,8 @@
         <button type="submit" class="mod-primary">Add new time entry</button>
       </form>
 
+      <p id="error"></p>
+
       <div id="loading">
         <div class="spinner">
           <div class="rect1"></div>
@@ -115,6 +117,6 @@
       </section>
     </main>
 
-    <script src="form.js"></script>
+    <script src="https://cajacko.github.io/trello-timesheet/form.js"></script>
   </body>
 </html>
