--- a/form.html
+++ b/form.html
@@ -81,7 +81,7 @@
         <input id="timesheetDate" type="text" name="date" placeholder="Date: 2018-01-12" />
 
         <label for="timesheetTime">Time (hrs):</label>
-        <input id="timesheetTime" type="number" name="time" placeholder="e.g: 2" />
+        <input id="timesheetTime" type="text" name="time" placeholder="e.g: 2" />
 
         <label for="timesheetNotes">Notes:</label>
         <textarea id="timesheetNotes" name="notes" placeholder="e.g: 2"></textarea>
