--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Timesheet</title>
+    <style>
+      html {
+        height: 100vh;
+        width: 100vw;
+      }
+
+      html, body, .app {
+        display: flex;
+        flex: 1;
+        overflow: hidden;
+        margin: 0;
+        padding: 0;
+      }
+    </style> 
   </head>
   <body>
     <div id="app" class="app"></div>
