--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -22,9 +21,12 @@
     <title>React App</title>
   </head>
   <body>
+    <script src="https://p.trellocdn.com/power-up.min.js"></script>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+
+    <script>console.warn('HTML loaded');</script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -36,5 +38,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
   </body>
 </html>
